--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - pip install -r req.txt
 
 script:
-  - python3 leetcode-generate.py
+  - python3 leetcode_generate.py
 
 after_script:
   - git init
