--- a/config.cfg
+++ b/config.cfg
@@ -2,5 +2,5 @@
 
 username = username
 password = password
-language = python, golang
+language = python,javascript
 repo = https://github.com/bonfy/leetcode
