--- a/config.cfg
+++ b/config.cfg
@@ -4,3 +4,4 @@ username = username
 password = password
 language = python,javascript
 repo = https://github.com/bonfy/leetcode
+driverpath = /usr/local/bin/chromedriver
