--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,15 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+requests = "==2.18.4"
+selenium = "==3.11.0"
+certifi = "==2018.1.18"
+chardet = "==3.0.4"
+cssselect = "==1.0.3"
+idna = "==2.6"
+lxml = "==4.2.1"
+pyquery = "==1.4.0"
+"urllib3" = "==1.22"
 
 [dev-packages]
 
