--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: bonfy
-custom: ['https://paypal.me/foreverbonfy, 'https://raw.githubusercontent.com/bonfy/image/master/global/sponsor.jpg']
+custom: ["https://paypal.me/foreverbonfy", "https://raw.githubusercontent.com/bonfy/image/master/global/sponsor.jpg"]
